--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -70,10 +70,27 @@ jobs:
     #     solution-type: 'Unmanaged'
     #     overwrite-files: true
 
-    - name: branch-solution, prepare it for a PullRequest
-      uses: microsoft/powerplatform-actions/branch-solution@v1  # Use latest available version
-      with:
-        solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
-        solution-target-folder: ${{ github.event.inputs.solution_target_folder}}/${{ github.event.inputs.solution_name }}
-        repo-token: ${{ secrets.GH_TOKEN }}
-        allow-empty-commit: true
+    # - name: branch-solution, prepare it for a PullRequest
+    #   uses: microsoft/powerplatform-actions/branch-solution@v1  # Use latest available version
+    #   with:
+    #     solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
+    #     solution-target-folder: ${{ github.event.inputs.solution_target_folder}}/${{ github.event.inputs.solution_name }}
+    #     repo-token: ${{ secrets.GH_TOKEN }}
+    #     allow-empty-commit: true
+    
+
+    # Make a simple change (e.g., creating a new file)
+    - name: Create a new file
+      run: |
+        echo "Make a simple change (e.g., creating a new file)
+    - name: Create a new file" > workflowfile.txt
+        git add new-file.txt
+        git commit -m "Add new file"
+
+    # Push the changes to the new branch using the GitHub Personal Access Token
+    - name: Push changes to new branch
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }} # Reference the stored secret
+      run: |
+        git remote set-url origin https://github-actions:${{ secrets.GH_TOKEN }}@github.com/anney1/github-action-repo.git
+        git push origin main # Push the changes to the main branch
