--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,7 +49,7 @@ jobs:
       with:
         environment-url: ${{env.ENVIRONMENT_URL}}
         app-id: ${{env.CLIENT_ID}}
-        client-secret: ${{ secrets.PowerPlatformSPN }}
+        client-secret: ${{ secrets.Client_SPN }}
         tenant-id: ${{env.TENANT_ID}}
 
     - name: export-solution action
@@ -57,7 +57,7 @@ jobs:
       with:
         environment-url: ${{env.ENVIRONMENT_URL}}
         app-id: ${{env.CLIENT_ID}}
-        client-secret: ${{ secrets.PowerPlatformSPN }}
+        client-secret: ${{ secrets.Client_SPN }}
         tenant-id: ${{env.TENANT_ID}}
         solution-name: ALMLab
         solution-output-file: out/exported/ALMLab.zip
