--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ on:
         default: solutions/
 
 env:
-  ENVIRONMENT_URL: 'https://org41c53d90.crm4.dynamics.com'
+  ENVIRONMENT_URL: 'https://org5569b62d.crm15.dynamics.com'
   CLIENT_ID: 'c37f4956-70a3-4e74-a2d2-225b579d1a21'
   TENANT_ID: '302edaf0-65d6-449a-a796-b83cfb733f0d'
 
