--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,10 +59,10 @@ jobs:
     - name: export-solution action
       uses: microsoft/powerplatform-actions/export-solution@v1  # Use latest available version
       with:
-        environment-url: ${{env.ENVIRONMENT_URL}}
-        app-id: ${{env.CLIENT_ID}}
+        environment-url: 'https://org5569b62d.crm15.dynamics.com'
+        app-id: '94e95571-a37c-432e-bae6-1ae9671a4983'
         client-secret: ${{ secrets.Client_SPN }}
-        tenant-id: ${{env.TENANT_ID}}
+        tenant-id: ${{secrets.TENANT_ID}}
         solution-name: ALMLab
         solution-output-file: out/exported/ALMLab.zip
 
