--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ on:
       solution_name:
         description: 'Name of the solution to work on from Power Platform'
         required: true
-        default: ALMLab
+        default: almlab
       solution_exported_folder:
         description: 'Folder name for staging the exported solution *do not change*'
         required: true
@@ -63,22 +63,22 @@ jobs:
         app-id: '94e95571-a37c-432e-bae6-1ae9671a4983'
         client-secret: ${{ secrets.Client_SPN }}
         tenant-id: ${{secrets.TENANT_ID}}
-        solution-name: ALMLab
-        solution-output-file: out/exported/ALMLab.zip
+        solution-name: almlab
+        solution-output-file: out/exported/almlab.zip
 
     - name: unpack-solution action
       uses: microsoft/powerplatform-actions/unpack-solution@v1  # Use latest available version
       with:
-        solution-file: out/exported/ALMLab.zip
-        solution-folder: out/solutions/ALMLab
+        solution-file: out/exported/almlab.zip
+        solution-folder: out/solutions/almlab
         solution-type: 'Unmanaged'
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
       uses: microsoft/powerplatform-actions/branch-solution@v1  # Use latest available version
       with:
-        solution-folder: out/solutions/ALMLab
-        solution-target-folder: solutions/ALMLab
+        solution-folder: out/solutions/almlab
+        solution-target-folder: solutions/almlab
         repo-token: ${{ secrets.GH_TOKEN }}
         allow-empty-commit: true
     
