--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -1,47 +1,47 @@
 name: release-solution-to-prod-reusable
 # Reusable workflow
-# convert solution to managed (using a build PowerPlatform environment for the conversion)
-# upload the solution to the GitHub artifacts and deploy to the PROD environment
+# Convert solution to managed (using a build PowerPlatform environment for the conversion)
+# Upload the solution to the GitHub artifacts and deploy to the PROD environment
 on:
   workflow_call:
-    inputs: 
-      #Do Not change these values
-      #Values are set by the caller
-      #caller sample: release-action-call.ymnl
+    inputs:
+      # Do Not change these values
+      # Values are set by the caller
+      # Caller sample: release-action-call.ymnl
       solution_name:
         description: 'The solution name.'
         type: string
-        default: gitsol       
+        default: gitsol
       solution_shipping_folder:
-        description: 'folder name for staging the exported solution *do not change*'        
+        description: 'Folder name for staging the exported solution *do not change*'
         type: string
         default: out/ship/
       solution_outbound_folder:
-        description: 'staging the unpacked solution folder before check-in *do not change*'
+        description: 'Staging the unpacked solution folder before check-in *do not change*'
         type: string
         default: out/solutions/
-      solution_source_folder: 
-       description: 'folder name to be created and checked in *do not change*'
-       type: string
-       default: solutions/
+      solution_source_folder:
+        description: 'Folder name to be created and checked in *do not change*'
+        type: string
+        default: solutions/
       solution_release_folder:
-       description: 'folder where the released binaries are going to be hosted *do not change*'
-       type: string
-       default: out/release
+        description: 'Folder where the released binaries are going to be hosted *do not change*'
+        type: string
+        default: out/release
       BUILD_ENVIRONMENT_URL:
-        description: 'Build environment url.'
-        type: string
-        required: true      
-      PRODUCTION_ENVIRONMENT_URL: 
-        description: 'Production environment url.'
+        description: 'Build environment URL.'
         type: string
         required: true
-      CLIENT_ID: 
-        description: 'The client id'
+      PRODUCTION_ENVIRONMENT_URL:
+        description: 'Production environment URL.'
         type: string
         required: true
-      TENANT_ID: 
-        description: 'The tenant id'
+      CLIENT_ID:
+        description: 'The client ID'
+        type: string
+        required: true
+      TENANT_ID:
+        description: 'The tenant ID'
         type: string
         required: true
     secrets:
@@ -52,7 +52,6 @@ on:
 jobs:
   convert-to-managed:
     runs-on: windows-latest
-    # or you can say runs-on: ubuntu-latest
     env:
       RUNNER_DEBUG: 1
 
@@ -61,43 +60,47 @@ jobs:
       with:
         lfs: true
 
+    - name: Debug solution folder structure
+      run: |
+        ls -R ${{ inputs.solution_source_folder }}/${{ inputs.solution_name }}
+
     - name: Pack solution
       uses: microsoft/powerplatform-actions/pack-solution@v0
       with:
-        solution-folder: ${{ inputs.solution_source_folder}}/${{ inputs.solution_name }}
-        solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
+        solution-folder: ${{ inputs.solution_source_folder }}/${{ inputs.solution_name }}
+        solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip
         solution-type: Unmanaged
 
     - name: Import solution as unmanaged to build env
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
-        environment-url: ${{inputs.BUILD_ENVIRONMENT_URL}}
-        app-id: ${{inputs.CLIENT_ID}}
+        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
+        app-id: ${{ inputs.CLIENT_ID }}
         client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{inputs.TENANT_ID}}
-        solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
+        tenant-id: ${{ inputs.TENANT_ID }}
+        solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip
         force-overwrite: true
         publish-changes: true
 
     - name: Export solution as managed
       uses: microsoft/powerplatform-actions/export-solution@v0
       with:
-        environment-url: ${{inputs.BUILD_ENVIRONMENT_URL}}
-        app-id: ${{inputs.CLIENT_ID}}
-        client-secret: ${{ secrets.envSecret }} 
-        tenant-id: ${{inputs.TENANT_ID}}
+        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
+        app-id: ${{ inputs.CLIENT_ID }}
+        client-secret: ${{ secrets.envSecret }}
+        tenant-id: ${{ inputs.TENANT_ID }}
         solution-name: ${{ inputs.solution_name }}
         managed: true
-        solution-output-file: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}_managed.zip
+        solution-output-file: ${{ inputs.solution_shipping_folder }}/${{ inputs.solution_name }}_managed.zip
 
     - name: Upload the ready to ship solution to GH artifact store
       uses: actions/upload-artifact@v4
       with:
         name: managedSolutions
-        path: ${{ inputs.solution_shipping_folder}}/
+        path: ${{ inputs.solution_shipping_folder }}/
 
   release-to-staging:
-    needs: [ convert-to-managed ]
+    needs: [convert-to-managed]
     runs-on: windows-latest
     env:
       RUNNER_DEBUG: 1
@@ -111,14 +114,15 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: managedSolutions
-        path: ${{ inputs.solution_release_folder}}
+        path: ${{ inputs.solution_release_folder }}
+
     - name: Import solution to prod env
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
-        environment-url: ${{inputs.PRODUCTION_ENVIRONMENT_URL}}
-        app-id: ${{inputs.CLIENT_ID}}
+        environment-url: ${{ inputs.PRODUCTION_ENVIRONMENT_URL }}
+        app-id: ${{ inputs.CLIENT_ID }}
         client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{inputs.TENANT_ID}}
-        solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
+        tenant-id: ${{ inputs.TENANT_ID }}
+        solution-file: ${{ inputs.solution_release_folder }}/${{ inputs.solution_name }}_managed.zip
         force-overwrite: true
         publish-changes: true
