--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -59,6 +59,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         lfs: true
+        fetch-depth: 0  # Fetch all history and files
+
+    - name: Debug repository contents
+      run: |
+        ls -R
 
     - name: Debug solution folder structure
       run: |
@@ -109,6 +114,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         lfs: true
+        fetch-depth: 0  # Fetch all history and files
 
     - name: Fetch the ready to ship solution from GH artifact store
       uses: actions/download-artifact@v4
@@ -125,4 +131,5 @@ jobs:
         tenant-id: ${{ inputs.TENANT_ID }}
         solution-file: ${{ inputs.solution_release_folder }}/${{ inputs.solution_name }}_managed.zip
         force-overwrite: true
+        publish-changes: true
         publish-changes: true
