--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -1,46 +1,40 @@
 name: release-solution-to-prod-reusable
-# Reusable workflow
-# convert solution to managed (using a build PowerPlatform environment for the conversion)
-# upload the solution to the GitHub artifacts and deploy to the PROD environment
 on:
   workflow_call:
-    inputs: 
-      #Do Not change these values
-      #Values are set by the caller
-      #caller sample: release-action-call.ymnl
+    inputs:
       solution_name:
         description: 'The solution name.'
         type: string
-        default: gitsol       
+        default: gitsol
       solution_shipping_folder:
-        description: 'folder name for staging the exported solution *do not change*'        
+        description: 'folder name for staging the exported solution *do not change*'
         type: string
         default: out/ship/
       solution_outbound_folder:
         description: 'staging the unpacked solution folder before check-in *do not change*'
         type: string
         default: out/solutions/
-      solution_source_folder: 
-       description: 'folder name to be created and checked in *do not change*'
-       type: string
-       default: solutions/
+      solution_source_folder:
+        description: 'folder name to be created and checked in *do not change*'
+        type: string
+        default: solutions/
       solution_release_folder:
-       description: 'folder where the released binaries are going to be hosted *do not change*'
-       type: string
-       default: out/release
+        description: 'folder where the released binaries are going to be hosted *do not change*'
+        type: string
+        default: out/release
       BUILD_ENVIRONMENT_URL:
         description: 'Build environment url.'
         type: string
-        required: true      
-      PRODUCTION_ENVIRONMENT_URL: 
-        description: 'Production environment url.'
+        required: true
+      PRODUCTION_ENVIRONMENT_URL:
+        description: 'Prod Env URL'
         type: string
         required: true
-      CLIENT_ID: 
+      CLIENT_ID:
         description: 'The client id'
         type: string
         required: true
-      TENANT_ID: 
+      TENANT_ID:
         description: 'The tenant id'
         type: string
         required: true
@@ -52,7 +46,6 @@ on:
 jobs:
   convert-to-managed:
     runs-on: windows-latest
-    # or you can say runs-on: ubuntu-latest
     env:
       RUNNER_DEBUG: 1
 
@@ -64,37 +57,37 @@ jobs:
     - name: Pack solution
       uses: microsoft/powerplatform-actions/pack-solution@v0
       with:
-        solution-folder: ${{ inputs.solution_source_folder}}/${{ inputs.solution_name }}
-        solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
+        solution-folder: ${{ inputs.solution_source_folder }}/${{ inputs.solution_name }}  # Use input for solution folder
+        solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip  # Use input for solution file
         solution-type: Unmanaged
 
     - name: Import solution as unmanaged to build env
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
-        environment-url: ${{inputs.BUILD_ENVIRONMENT_URL}}
-        app-id: ${{inputs.CLIENT_ID}}
-        client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{inputs.TENANT_ID}}
-        solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
+        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}  # Use input for build environment URL
+        app-id: ${{ inputs.CLIENT_ID }}  # Use input for client ID
+        client-secret: ${{ secrets.envSecret }}  # Use secret for client secret
+        tenant-id: ${{ inputs.TENANT_ID }}  # Use input for tenant ID
+        solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip  # Use input for solution file
         force-overwrite: true
         publish-changes: true
 
     - name: Export solution as managed
       uses: microsoft/powerplatform-actions/export-solution@v0
       with:
-        environment-url: ${{inputs.BUILD_ENVIRONMENT_URL}}
-        app-id: ${{inputs.CLIENT_ID}}
-        client-secret: ${{ secrets.envSecret }} 
-        tenant-id: ${{inputs.TENANT_ID}}
-        solution-name: ${{ inputs.solution_name }}
+        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}  # Use input for build environment URL
+        app-id: ${{ inputs.CLIENT_ID }}  # Use input for client ID
+        client-secret: ${{ secrets.envSecret }}  # Use secret for client secret
+        tenant-id: ${{ inputs.TENANT_ID }}  # Use input for tenant ID
+        solution-name: ${{ inputs.solution_name }}  # Use input for solution name
         managed: true
-        solution-output-file: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}_managed.zip
+        solution-output-file: ${{ inputs.solution_shipping_folder }}/${{ inputs.solution_name }}_managed.zip  # Use input for solution output file
 
     - name: Upload the ready to ship solution to GH artifact store
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v2
       with:
         name: managedSolutions
-        path: ${{ inputs.solution_shipping_folder}}/
+        path: ${{ inputs.solution_shipping_folder }}  # Use input for shipping folder
 
   release-to-staging:
     needs: [ convert-to-managed ]
@@ -108,17 +101,18 @@ jobs:
         lfs: true
 
     - name: Fetch the ready to ship solution from GH artifact store
-      uses: actions/download-artifact@v4
+      uses: actions/download-artifact@v2
       with:
         name: managedSolutions
-        path: ${{ inputs.solution_release_folder}}
+        path: ${{ inputs.solution_release_folder }}  # Use input for release folder
+
     - name: Import solution to prod env
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
-        environment-url: ${{inputs.PRODUCTION_ENVIRONMENT_URL}}
-        app-id: ${{inputs.CLIENT_ID}}
-        client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{inputs.TENANT_ID}}
-        solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
+        environment-url: ${{ inputs.PRODUCTION_ENVIRONMENT_URL }}  # Use input for production environment URL
+        app-id: ${{ inputs.CLIENT_ID }}  # Use input for client ID
+        client-secret: ${{ secrets.envSecret }}  # Use secret for client secret
+        tenant-id: ${{ inputs.TENANT_ID }}  # Use input for tenant ID
+        solution-file: ${{ inputs.solution_release_folder }}/${{ inputs.solution_name }}_managed.zip  # Use input for solution file
         force-overwrite: true
         publish-changes: true
